<resources>
    <string name="AppRestart_SettingsChanged_Action_RestartApp">Restart app</string>
    <string name="AppRestart_SettingsChanged_Message_OutOfSync">Client and server are out of sync!</string>
    <string name="Application_AppRating_Action_RatingNegativeButton">Not now</string>
    <string name="Application_AppRating_Action_RatingRemindMeLater">Remind me later.</string>
    <string name="Application_AppRating_Label_AppRatingDialogCloseButtonText">X</string>
    <string name="Application_AppRating_Label_PleaseRate">Please rate us!</string>
    <string name="Application_AppRating_Label_RatingMessage">If you’re enjoying Roblox please rate our app.</string>
    <string name="Application_AppRating_Label_RatingYes">Yes</string>
    <string name="Application_AppRating_Response_CouldNotLaunchPlayStore">Could not launch Play Store!</string>
    <string name="Application_ConnectionError_Dialog_Title">Connection error</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationBodyDeadlinePhase">On %1$s, Roblox will no longer support this device because it uses OpenGL ES 2.0, a graphics API which we are deprecating. To keep playing Roblox, please use a device that is compatible with %2$s.</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationBodyDeprecatedPhase">This device is no longer supported by Roblox because it uses OpenGL ES 2.0, a graphics API which we deprecated. To keep playing Roblox, please use a device that is compatible with %1$s.</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationBodyNotifyPhase">In the near future Roblox will no longer support this device because it uses OpenGL ES 2.0, a graphics API which we are deprecating. To keep playing Roblox, please use a device that is compatible with %1$s.</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationDate">March 1st, 2024</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationTitleDeadlinePhase">Your device is going out of date</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationTitleDeprecatedPhase">Your device is out of date</string>
    <string name="Application_Deprecation_OpenGLES2DeprecationTitleNotifyPhase">Your device is going out of date</string>
    <string name="Application_Deprecation_SystemRequirementsLink">https://en.help.roblox.com/hc/en-us/articles/203312800-Computer-Hardware-Operating-System-Requirements</string>
    <string name="Application_Deprecation_SystemRequirementsText">Roblox’s system requirements</string>
    <string name="Application_Leave_Action_LeaveApp">Leave App</string>
    <string name="Application_Leave_Response_LeaveAppConfirmation">Do you want to leave the app?</string>
    <string name="Application_Logout_Action_Logout">Log Out</string>
    <string name="Application_Logout_Response_LogoutConfirmation">Do you want to log out?</string>
    <string name="Application_Logout_Response_SorryLoggedOut">Sorry! You are logged out.</string>
    <string name="Application_Settings_Permissions_NSContactsUsageDescription2">By allowing access, your device contacts will be periodically synced and matches with existing Roblox users will be stored on Roblox’s secured servers. You can manage your synced contact data anytime in your account’s privacy settings.</string>
    <string name="Application_Settings_Permissions_NSContactsUsageDescription3">Connect with friends on Roblox. Your contacts will be regularly synced and matches with other Roblox users will be stored to help you find friends. You can manage this any time in settings.</string>
    <string name="Application_Upgrade_Action_DownloadErrorRetry">Try Again</string>
    <string name="Application_Upgrade_Action_NotNow">Not now</string>
    <string name="Application_Upgrade_Action_Upgrade">Upgrade</string>
    <string name="Application_Upgrade_Error_InvalidUrl">APK URL error.</string>
    <string name="Application_Upgrade_Label_NewApplicationNeeded">Need to upgrade the current version, please download the new version to login.</string>
    <string name="Application_Upgrade_Message_ApkExternalStoragePermission">Used to upgrade the application. If access to the external storage is not allowed, the upgrade will not be possible and the application will be closed.</string>
    <string name="Application_Upgrade_Message_ApkInstallPermission">Before we get started, you might have to click the SETTINGS and Allow app installs.</string>
    <string name="Application_Upgrade_Message_DownloadError">Please check the internet connection for downloading the new APK.</string>
    <string name="Application_Upgrade_Response_LuobuUpgradeBodyString">Your Luobu version is out of date and cannot run correctly. You need to download the latest version to continue.</string>
    <string name="Application_Upgrade_Response_Title">Roblox Upgrade</string>
    <string name="Application_Upgrade_Response_UpgradeBodyString">Your version of Roblox is out of date and will not work properly. Taking you to the %1$s for an upgrade.</string>
    <string name="Application_Upgrade_Title_ApkExternalStoragePermission">Roblox wants to access your storage</string>
    <string name="Application_Upgrade_Title_DownloadError">Upgrade APK download failed</string>
    <string name="Application_Upgrade_Title_DownloadingApp">Downloading App</string>
    <string name="Authentication_Captcha_Action_Reload">Reload</string>
    <string name="Authentication_Captcha_Action_Submit">Submit</string>
    <string name="Authentication_Captcha_Description_CaptchaHint">Type the text</string>
    <string name="Authentication_Captcha_Heading_CaptchaTitle">Please Complete Captcha Challenge</string>
    <string name="Authentication_Captcha_Label_VerifyHuman">Before you continue, we need to verify you are human. Please fill out form below.</string>
    <string name="Authentication_Captcha_Response_CaptchaFailed">Captcha Failed</string>
    <string name="Authentication_Captcha_Response_CaptchaFailedToLoad">Failed to load Captcha - please try restarting the app.</string>
    <string name="Authentication_CrossDevice_Action_GoBack">Go Back</string>
    <string name="Authentication_Login_Action_Cancel">Cancel</string>
    <string name="Authentication_Login_Action_Continue">Continue</string>
    <string name="Authentication_Login_Action_ForgotPassword">Forgot password</string>
    <string name="Authentication_Login_Action_ForgotPasswordOrUsernameQuestion">Forgot password or username?</string>
    <string name="Authentication_Login_Action_ForgotUsernamePassword">Forgot username/password</string>
    <string name="Authentication_Login_Action_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Action_Login">Login</string>
    <string name="Authentication_Login_Action_PlayNow">Play Now</string>
    <string name="Authentication_Login_Action_QQLogin">QQ Login</string>
    <string name="Authentication_Login_Action_SignUp">Sign up</string>
    <string name="Authentication_Login_Action_WeChatLogin">WeChat Login</string>
    <string name="Authentication_Login_Description_CancelButtonContentDesc">loginCancelButton</string>
    <string name="Authentication_Login_Description_LoginButtonContentDesc">loginLoginButton</string>
    <string name="Authentication_Login_Description_PasswordContentDescription">loginPassword</string>
    <string name="Authentication_Login_Description_UsernameContentDescription">loginUsername</string>
    <string name="Authentication_Login_Label_AcceptTermsOfUseAndPrivacyPolicy">By clicking I Agree, you are agreeing to the %1$s and %2$s.</string>
    <string name="Authentication_Login_Label_DontHaveAnAccount">Don\'t have an account?</string>
    <string name="Authentication_Login_Label_IAgree">I AGREE</string>
    <string name="Authentication_Login_Label_LogInCapitalized">Log In</string>
    <string name="Authentication_Login_Label_LoggingIn">Logging in</string>
    <string name="Authentication_Login_Label_LoggingInSpinnerText">Logging in…</string>
    <string name="Authentication_Login_Label_Login">Log in</string>
    <string name="Authentication_Login_Label_Login_Uppercase">LOGIN</string>
    <string name="Authentication_Login_Label_NotAMember">Not a member?</string>
    <string name="Authentication_Login_Label_Password">Password</string>
    <string name="Authentication_Login_Label_QQ">QQ</string>
    <string name="Authentication_Login_Label_RealNameAuthentication">Real Name Authentication</string>
    <string name="Authentication_Login_Label_RealNameVerification">Your real name authentication information has already been stored in Tencent\'s real name authentication database. You may now continue to log in and play Tencent Games.</string>
    <string name="Authentication_Login_Label_TencentAntiAddictionText">Boycott bad games, refuse pirated games. Be aware of self-defense and being deceived. Playing games is good for your brain, but too much game play can harm your health. Manage your time well and enjoy a healthy lifestyle.</string>
    <string name="Authentication_Login_Label_TencentAuthenticating">Authenticating...</string>
    <string name="Authentication_Login_Label_TencentNotInstalled">%1$s is not installed.</string>
    <string name="Authentication_Login_Label_TencentPleaseWait">Please wait.</string>
    <string name="Authentication_Login_Label_TencentUserCancel">You are logged out of %1$s. Please log in to %1$s.</string>
    <string name="Authentication_Login_Label_TencentVersionNotSupported">%1$s version is not supported.</string>
    <string name="Authentication_Login_Label_TermsOfService">Terms of Service</string>
    <string name="Authentication_Login_Label_TermsOfServiceAndPrivacyPolicyText">I have read and agreed to Tencent Games\' %1$s and %2$s.</string>
    <string name="Authentication_Login_Label_TermsOfUseChanged">TERMS OF USE HAVE CHANGED</string>
    <string name="Authentication_Login_Label_ThankYou">Thank you for using our game.</string>
    <string name="Authentication_Login_Label_Username">Username</string>
    <string name="Authentication_Login_Label_UsernameEmail">Username/Email</string>
    <string name="Authentication_Login_Label_UsernameEmailPhone">Username/Email/Phone</string>
    <string name="Authentication_Login_Label_UsernamePhone">Username/Phone</string>
    <string name="Authentication_Login_Label_WeChat">WeChat</string>
    <string name="Authentication_Login_Response_AccountAlreadyConnected">This Account is already connected to a Roblox Account.</string>
    <string name="Authentication_Login_Response_AccountIssueErrorContactSupport">Account issue. Please contact Support.</string>
    <string name="Authentication_Login_Response_ErrorLoginWithUsername">Something went wrong. Please login with your username.</string>
    <string name="Authentication_Login_Response_FloodCheckError">You\'ve exceeded the maximum number of attempts. Please try again later.</string>
    <string name="Authentication_Login_Response_ForgotPasswordOrUsername">Forgot username/password</string>
    <string name="Authentication_Login_Response_GenericError">Something went wrong. Please try again.</string>
    <string name="Authentication_Login_Response_GlobalAppAccessError">The account is unable to log in.</string>
    <string name="Configure_Deployment_Enable">Enable</string>
    <string name="Configure_Deployment_IP_Address">IP Address</string>
    <string name="Configure_Deployment_Instructions">This allows you to enable deployment of the Lua App from Studio.\n\nThe IP address should be the local address of the machine running Studio and the port should match the port configured in Studio.\n\nIMPORTANT: This requires the \"StudioUA\" version of the Client to be installed from AppCenter. It WILL NOT work with any other version.\nStudio also must have the correct flags enabled.</string>
    <string name="Configure_Deployment_Port">Port</string>
    <string name="Configure_Deployment_Test_Connection">Test Connection</string>
</resources>