<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.roblox.client.components.RbxTextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/RbxGray1"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Application_AppRating_Label_PleaseRate"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/RbxGray2"
            android:id="@+id/dialog_rating_close_btn"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Application_AppRating_Label_AppRatingDialogCloseButtonText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <com.roblox.client.components.RbxTextView
        android:textSize="18sp"
        android:textColor="@color/RbxGray1"
        android:gravity="start|center_vertical"
        android:id="@+id/rbxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Application_AppRating_Label_RatingMessage"
        android:layout_marginStart="12dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <com.roblox.client.components.RbxButton
            android:layout_gravity="center"
            android:id="@+id/dialog_rating_positive_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/Application_AppRating_Label_RatingYes"
            android:layout_weight="10"
            app:buttonTextSize="16sp"
            style="@style/Theme.Roblox.Button.Flat.Blue"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <com.roblox.client.components.RbxButton
            android:textSize="16sp"
            android:layout_gravity="center"
            android:id="@+id/dialog_rating_negative_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/Application_AppRating_Action_RatingNegativeButton"
            android:layout_weight="10"
            style="@style/Theme.Roblox.Button.Flat.White"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">
        <com.roblox.client.components.RbxButton
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/RbxBlue1"
            android:gravity="start"
            android:id="@+id/dialog_rating_skip_btn"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Application_AppRating_Action_RatingRemindMeLater"/>
    </LinearLayout>
</LinearLayout>
